force-app/main/default/objects/Developer__c/fields/BirthDate__c.field-meta.xml
<CustomField>
    <fullName>BirthDate__c</fullName>
    <description>Stores the birthdate
Age Age __c Formula Calculates the age o</description>
    <label>BirthDate</label>
    <type>Date</type>
</CustomField>