force-app/main/default/objects/Developer__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the Location of 
the Manager</description>
    <label>Location</label>
    <referenceTo>Work_Location__c</referenceTo>
    <relationshipLabel>Developers</relationshipLabel>
    <relationshipName>Developers</relationshipName>
    <type>Lookup</type>
</CustomField>