force-app/main/default/objects/Developer__c/fields/Reporting_Manager__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Manager__c</fullName>
    <label>Reporting Manager</label>
    <referenceTo>Manager__c</referenceTo>
    <relationshipLabel>Developers</relationshipLabel>
    <relationshipName>Developers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>